[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/HealthHUD.gd" type="Script" id=1]
[ext_resource path="res://Resources/UI/HeartUIEmpty.png" type="Texture" id=2]
[ext_resource path="res://Resources/UI/HeartUIFull.png" type="Texture" id=3]

[node name="HealthHUD" type="Control"]
margin_left = 4.0
margin_top = 4.0
margin_right = 40.0
margin_bottom = 15.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthLabel" type="Label" parent="."]
margin_top = 11.0
margin_right = 18.0
margin_bottom = 25.0
text = "HP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EmptyHeart" type="TextureRect" parent="."]
margin_right = 15.0
margin_bottom = 11.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullHeart" type="TextureRect" parent="."]
margin_right = 15.0
margin_bottom = 11.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}
